# getting-started-rust

./: README.md
context/: lecture-plan.md  research.md
context/ch01/: example-code-implementation-plan.md  plan.md  research.md
context/ch02/: example-code-implementation-plan.md  homework-code-implementation-plan.md  plan.md  research.md
docs/: ch01.md  ch02.md
dungeon_crawler/: Cargo.toml  README.md
dungeon_crawler/src/: main.rs
examples/: README.md
examples/ch01/: .gitignore  Cargo.toml
examples/ch01/src/: 01_hello_world.rs  02_function_analysis.rs  03_println_basics.rs  04_string_interpolation.rs  05_formatting_options.rs  06_debug_format.rs  07_special_characters.rs  08_comments.rs  09_game_title_screen.rs  10_colored_title_screen.rs  main.rs
examples/ch02/: Cargo.toml
examples/ch02/src/: 01_variables.rs  02_mutability.rs  03_constants.rs  04_shadowing.rs  05_integer_types.rs  06_float_types.rs  07_boolean.rs  08_character.rs  09_type_inference.rs  10_type_conversion.rs  11_tuples.rs  12_arrays.rs  13_character_creation.rs  main.rs
